chore: Small fix for null enums